--- a/lovelace-migration/.README.j2
+++ b/lovelace-migration/.README.j2
@@ -64,7 +64,7 @@ If you are more interested in stable releases of our add-ons:
 {% endif %}
 [project-stage-shield]: https://img.shields.io/badge/project%20stage-experimental-yellow.svg
 [forum-shield]: https://img.shields.io/badge/community-forum-brightgreen.svg
-[forum]: https://community.home-assistant.io/
+[forum]: https://community.home-assistant.io/t/community-hass-io-add-on-lovelace-migration/61552?u=dale3h
 [discord-shield]: https://img.shields.io/discord/330944238910963714.svg
 [discord]: https://discord.gg/c5DvZ4e
 [lovelace-docs]: https://www.home-assistant.io/lovelace/
