--- a/lovelace-migration/.README.j2
+++ b/lovelace-migration/.README.j2
@@ -62,7 +62,7 @@ If you are more interested in stable releases of our add-ons:
 <https://github.com/hassio-addons/repository>
 
 {% endif %}
-[project-stage-shield]: https://img.shields.io/badge/project%20stage-experimental-yellow.svg
+[project-stage-shield]: https://img.shields.io/badge/project%20stage-%20!%20DEPRECATED%20%20%20!-ff0000.svg
 [forum-shield]: https://img.shields.io/badge/community-forum-brightgreen.svg
 [forum]: https://community.home-assistant.io/t/community-hass-io-add-on-lovelace-migration/61552?u=dale3h
 [discord-shield]: https://img.shields.io/discord/478094546522079232.svg
